err/hematite.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hematite'...
Listing './lib/python3.5/site-packages/hematite/compat'...
Listing './lib/python3.5/site-packages/hematite/compat/tests'...
Listing './lib/python3.5/site-packages/hematite/raw'...
Listing './lib/python3.5/site-packages/hematite/raw/tests'...
Listing './lib/python3.5/site-packages/hematite/tests'...
Compiling './lib/python3.5/site-packages/hematite/tests/test_header_progress.py'...
***   File "./lib/python3.5/site-packages/hematite/tests/test_header_progress.py", line 22
    print 'Unimplemented Request Headers:'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hematite/tests/test_url_w3c.py'...
***   File "./lib/python3.5/site-packages/hematite/tests/test_url_w3c.py", line 83
    print parsed_test, url
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hematite-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
